# Galileo

./: CMakeLists.txt  copy_resources.sh  main.cpp
Resources/Shaders/textured/: fragment.fs
Shaders/: vertex.vs
Shaders/simple/: fragment.fs  vertex.vs
Shaders/textured/: vertex.vs
Source/: Common.h  GameObject.cpp  GameObject.h
Source/Core/: Camera.cpp  Camera.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  Window.cpp  Window.h
Source/Engine/Core/: Camera.cpp  Camera.h  Component.h  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameObject.h  GameState.h  Window.cpp  Window.h
Source/Engine/Core/Engine/: GameEngine.cpp  GameEngine.h  GameState.h
Source/Engine/Core/Object/: Camera.h  Component.h  GameObject.cpp  GameObject.h
Source/Engine/Graphics/Mesh/: Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h
Source/Engine/Graphics/Mesh/Loader/: ObjFileLoader.cpp  ObjFileLoader.h
Source/Engine/Graphics/Shader/: Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h
Source/Engine/Graphics/Texture/: TextureFactory.cpp  TextureFactory.h
Source/Engine/Graphics/Texture/Loader/: PngTextureLoader.cpp
Source/Engine/IO/: Files.cpp  Files.h
Source/Engine/Logging/: Logger.h  LoggerFactory.cpp
Source/Engine/Math/: BaseMath.cpp  BaseMath.h  Matrix4f.cpp  Vector2.h
Source/Game/: CameraController.cpp  CameraController.h  Chunk.cpp  Chunk.h  KeyboardController.cpp  KeyboardController.h  MyGameState.cpp  MyGameState.h  main.cpp
Source/Graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  Window.cpp  Window.h
Source/Graphics/Core/: Camera.h  Window.h
Source/Graphics/Mesh/: Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h
Source/Graphics/Mesh/Loader/: ObjFileLoader.cpp  ObjFileLoader.h
Source/Graphics/Shader/: Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h
Source/Graphics/Texture/: Texture.cpp  Texture.h  TextureFactory.cpp  TextureFactory.h
Source/Graphics/Texture/Loader/: BmpTextureLoader.cpp  BmpTextureLoader.h  PngTextureLoader.cpp  PngTextureLoader.h  TextureLoader.h
Source/IO/: Files.cpp  Files.h
Source/Logging/: Logger.cpp  Logger.h  LoggerFactory.h
Source/Math/: BaseMath.cpp  BaseMath.h  Matrix4f.cpp  Matrix4f.h  Vector2.h  Vector2i.cpp  Vector2i.h  Vector3.h  Vector3f.cpp  Vector3f.h
Source/Util/: Strings.cpp  Strings.h
